<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <TextView
            android:id="@+id/dayFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <ImageView
            android:id="@+id/weatherImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/maxTempFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maximum_temperature"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/minTempFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minimum_temperature"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/windDirectionFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_direction"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/windSpeedFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/visibilityFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visibility"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/pressureFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/humidityFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/uvRiskFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uv_risk"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/pollutionFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pollution"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/sunriseFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunrise"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/sunsetFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunset"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>