<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />


        <TextClock
            android:id="@+id/textClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />

        <FrameLayout
            android:id="@+id/fragmentContainer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp" />

        <FrameLayout
            android:id="@+id/fragmentContainer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp" />

        <FrameLayout
            android:id="@+id/fragmentContainer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="113dp"
            android:layout_height="60dp"
            android:text="@string/back"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/robert_lothian_s2225607" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>
</ScrollView>
